--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "module": "commonjs",
+    "module": "node16",
     "rootDir": "./src",
     "outDir": "./dist",
     "esModuleInterop": true,
