--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "chromadb": "^1.8.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ignore": "^5.3.1",
     "langchain": "^0.2.11",
     "octokit": "^4.0.2"
   }
